@@ -8,9 +8,12 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import org.testng.Assert;
+import org.testng.IInvokedMethod;
+import org.testng.IInvokedMethodListener;
 import org.testng.ITestResult;
 import org.testng.TestListenerAdapter;
 import org.testng.TestNG;
@@ -40,8 +43,57 @@ import test.retryAnalyzer.issue1946.TestclassSample2;
 import test.retryAnalyzer.issue2684.SampleTestClassWithGroupConfigs;
 import test.retryAnalyzer.issue2798.HashCodeAwareRetryAnalyzer;
 import test.retryAnalyzer.issue2798.TestClassSample;
+import test.retryAnalyzer.issue3231.InvocationCountRetrySample;
+import test.retryAnalyzer.issue3231.MutationSample;
+import test.retryAnalyzer.issue3231.RetryLimitSample;
 
 public class RetryAnalyzerTest extends SimpleBaseTest {
+
+  @Test
+  public void testRetryWithInvocationCount() {
+    InvocationCountRetrySample.invocationCount.set(0);
+    TestNG tng = create(InvocationCountRetrySample.class);
+    tng.run();
+    // 2 invocations * 2 attempts each = 4 total calls
+    assertThat(InvocationCountRetrySample.invocationCount.get()).isEqualTo(4);
+  }
+
+  @Test(description = "GITHUB-3231")
+  public void testMutationDoesNotCauseInfiniteRetryLoop() {
+    MutationSample.guardCounter.set(0);
+    AtomicInteger invCount = new AtomicInteger(0);
+    TestNG tng = create(MutationSample.class);
+    tng.addListener(
+        new IInvokedMethodListener() {
+          @Override
+          public void afterInvocation(IInvokedMethod method, ITestResult testResult) {
+            if (method.isTestMethod()) {
+              invCount.incrementAndGet();
+            }
+          }
+        });
+    tng.run();
+    assertThat(invCount.get()).isEqualTo(4);
+  }
+
+  @Test(description = "GITHUB-3231")
+  public void testEachRowHasItsOwnRetryLimit() {
+    AtomicInteger invCount = new AtomicInteger(0);
+    TestNG tng = create(RetryLimitSample.class);
+    tng.addListener(
+        new IInvokedMethodListener() {
+          @Override
+          public void afterInvocation(IInvokedMethod method, ITestResult testResult) {
+            if (method.isTestMethod()) {
+              invCount.incrementAndGet();
+            }
+          }
+        });
+    tng.run();
+    // Each row: 1 original + 1 retry = 2 attempts.
+    // 2 rows * 2 attempts = 4 total invocations.
+    assertThat(invCount.get()).isEqualTo(4);
+  }
 
   @Test(description = "GITHUB-2798")
   public void ensureNoDuplicateRetryAnalyzerInstancesAreCreated() {
