@@ -1,4 +1,5 @@
 Current (7.12.0)
+Fixed: GITHUB-3231: TestNG retry is going into infinite loop when the data provider returned object is modified before failure (Bartek Florczak)
 Update: Updated GitHub Actions test matrix to include JDK 25 and JDK 26 EA (Bartek Florczak)
 Fixed: GITHUB-3236: DataProvider parameters are not refreshed on retry when cacheDataForTestRetries=false (Bartek Florczak)
 Fixed: GITHUB-3227: assertEqualsNoOrder false positive when collection has same size and actual Collection is subset of expected collection (Krishnan Mahadevan)
